# rapidreact

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle
.OutlineViewer/: outlineviewer.json
.github/workflows/: main.yml
.wpilib/: wpilib_preferences.json
deadeye/: .gitignore  CMakeLists.txt  README.md
deadeye/ansible/: .gitignore  README.md  pyproject.toml
deadeye/ansible/files/: deadeye-rapid-react.service.j2  rapid-react.service.j2  rapid_react_id_ed25519  rapid_react_id_ed25519.pub
deadeye/ansible/inventory/: robots.yaml
deadeye/ansible/playbooks/: deploy.yaml
deadeye/config/: deadeye-config.json  download.py  pyproject.toml
deadeye/src/: hub_pipeline.cpp  hub_pipeline.h  hub_target_data.cpp  hub_target_data.h  main.cpp
deadeye/tests/: CMakeLists.txt  common.h  hub_pipeline_tests.cpp  hub_target_data_tests.cpp
docs/: Packing List stryke force.txt  Software Pamphlet 2022.docx  event-packing-checklist.md  field-location-notes.md  rapidreact.json
src/main/deploy/: 2022 shooter table World 6.csv  IRI 2.csv  IRI 3.csv  IRI 4.csv  InchToPixel.csv  Lakeview LookupTable.csv  LookupTable.csv  PostPracticeMatchesWorlds.csv  States Elims V1.csv  States Fimstine 1.csv  States Finals.csv  States LookupTable V2.csv  States Post Semis.csv  States Practice Match.csv  States Pre Elim.csv  Worlds 6.csv  Worlds-2.csv
src/main/deploy/paths/: BlueRightCargo2Collect.toml  BlueRightCargo3Collect.toml  BlueRightCargo3Shoot.toml  CrossCenterLine.toml  DefaultPath.toml  DefenseAutoTwoCargo1Shoot.toml  DefenseMoveOffOppBall.toml  DefenseTwoOppCargo2CollectShoot.toml  LeftCargo1Collect.toml  LeftCargo4Collect.toml  LeftCargoCollect.toml  MidCargo1Collect.toml  OppCargo2Collect.toml  OppCargo3Collect.toml  OppCargo5Collect.toml  OppCargo6Collect.toml  PrepareLeftCargo4.toml  RightCargo1Collect.toml  RightCargo2Collect.toml  RightCargo3Collect.toml  RightCargo3Shoot.toml  straightPath.toml  straightPath2.toml
src/main/java/frc/robot/: Constants.java  Registerable.java  Robot.java  RobotContainer.java
src/main/java/frc/robot/commands/Auton/: TwoCargoAuto.java
src/main/java/frc/robot/commands/auton/: DefenseAuto.java  DefenseTwoAuto.java  DestageThreeCargoAuto.java  FiveCargoAuto.java  ThreeCargoAuto.java  TwoCargoAuto.java  TwoPathCommandGroup.java  WaitCommand.java  WaitMatchTimeCommand.java
src/main/java/frc/robot/commands/climb/: AutoHighClimbCommand.java  AutoMidClimbCommand.java  AutoTraverseClimbCommand.java  EmergencyStopClimbCommand.java  ExtendSailCommand.java  InitiateClimbCommand.java  OpenLoopFixedArmCommand.java  OpenLoopPivotArmCommand.java  OpenLoopSet1MoveableCommand.java  OpenLoopSet1StaticCommand.java  OpenLoopSet2Command.java  OpenLoopSet2MoveableCommand.java  OpenLoopSet2StaticCommand.java  RetractSailCommand.java  RotateShoulderDownCommand.java  RotateShoulderUpCommand.java  ShoulderHoldPositionCommand.java  ToggleFixedRatchetCommand.java  TogglePivotRatchetCommand.java  ToggleRatchetPosCommand.java  ToggleRotatingRatchetPosCommand.java  ToggleStaticRatchetPosCommand.java  ZeroClimbCommand.java  ZeroMotorsCommand.java  actuateSet2.java
src/main/java/frc/robot/commands/drive/: DriveAutonCommand.java  DriveClimbCommand.java  DriveTeleopCommand.java  LockZeroCommand.java  OdoDriveSet.java  OdometryTestSetPosition.java  OffsetGyroCommand.java  (+3 more)
src/main/java/frc/robot/subsystems/: AutoSwitch.java  ClimbSubsystem.java  DeadeyeC0.java  DriveSubsystem.java  HubTargetData.java  IntakeExtendSubsystem.java  IntakeSubsystem.java  MagazineSubsystem.java  OdometryTestSubsystem.java  PathData.java  PowerDistHub.java  ShooterSubsystem.java  TurretSubsystem.java  VisionSubsystem.java
src/main/kotlin/frc/robot/commands/: HealthCheckCommand.kt
src/main/resources/: logback-event.xml  logback.xml
vendordeps/: deadeye.json  thirdcoast.json
(+96 files in other folders)
