[tool.poetry]
name = "deadeye-ansible"
version = "1.0.0"
description = "Ansible deployment playbook"
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.3.0"
ansible-lint = "^5.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
